discussion service controller
