# api/e2etests/api/openapi.yaml
@@ -12,16 +12,11 @@ servers:
 security:
 - CookieAuth: []
 tags:
-- description: Authentication endpoints.
+- description: User authentication.
   name: authentication
-- description: Administration endpoints.
-  name: administration
-- description: Message management endpoints.
-  name: message
 paths:
   /user/signup:
     post:
-      description: Create a user account with provided credentials.
       requestBody:
         content:
           application/json:
@@ -31,8 +26,6 @@ paths:
       responses:
         "200":
           description: Success
-        "409":
-          description: "Conflict: a user account with the same login already exists."
         default:
           content:
             application/json:
@@ -40,14 +33,12 @@ paths:
                 $ref: '#/components/schemas/ErrorDTO'
           description: Error
       security: []
-      summary: Sign up to the service
       tags:
       - authentication
       x-content-type: application/json
       x-accepts: application/json
   /user/signin:
     post:
-      description: Sign in using provided credentials and create a user session.
       requestBody:
         content:
           application/json:
@@ -56,16 +47,13 @@ paths:
         required: true
       responses:
         "200":
-          description: "Success: a user session is created and a session cookie is\
-            \ returned."
+          description: Success
           headers:
             Set-Cookie:
               explode: false
               schema:
                 type: string
               style: simple
-        "401":
-          description: "Unauthorized: invalid login or password."
         default:
           content:
             application/json:
@@ -73,54 +61,37 @@ paths:
                 $ref: '#/components/schemas/ErrorDTO'
           description: Error
       security: []
-      summary: Sign in to the service
       tags:
       - authentication
       x-content-type: application/json
       x-accepts: application/json
   /user/signout:
     post:
-      description: Sign out and close the user session.
-      responses:
-        "200":
-          description: "Success: the user session is closed."
-        default:
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorDTO'
-          description: Error
-      summary: Sign out from the service
-      tags:
-      - authentication
-      x-accepts: application/json
-  /user/{login}:
-    delete:
-      description: Delete the account of the user matching the given login. Only the
-        administrator can use this endpoint.
-      parameters:
-      - description: login of the user account to delete.
-        explode: false
-        in: path
-        name: login
-        required: true
-        schema:
-          type: string
-        style: simple
       responses:
         "200":
           description: Success
-        "404":
-          description: "Not found: User account not found."
         default:
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDTO'
           description: Error
-      summary: Delete a user account
       tags:
-      - administration
+      - authentication
+      x-accepts: application/json
+  /user/delete:
+    post:
+      responses:
+        "200":
+          description: Success
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDTO'
+          description: Error
+      tags:
+      - authentication
       x-accepts: application/json
   /user/forgotpwd:
     post:
@@ -279,7 +250,7 @@ paths:
           description: Error
       summary: Change user theme
       tags:
-      - appearance
+      - Appearance
       x-content-type: application/json
       x-accepts: application/json
   /user/language:
@@ -303,8 +274,16 @@ paths:
       - language
       x-content-type: application/json
       x-accepts: application/json
-  /discussions:
+  /discussions/{username}:
     get:
+      parameters:
+      - explode: false
+        in: path
+        name: username
+        required: true
+        schema:
+          type: string
+        style: simple
       responses:
         "200":
           content:
@@ -314,7 +293,7 @@ paths:
                   $ref: '#/components/schemas/DiscussionDTO'
                 type: array
           description: Successful response
-      summary: Get a list of all discussions
+      summary: Get a list of all discussions of a user
       tags:
       - messaging
       x-accepts: application/json
@@ -394,34 +373,6 @@ paths:
       x-accepts: application/json
 components:
   schemas:
-    MessageDTO:
-      example:
-        from: alice@acme
-        id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
-        to: bob@acme
-        type: text/plain
-        body: This is the message
-        timestamp: timestamp
-      properties:
-        id:
-          format: uuid
-          type: string
-        from:
-          example: alice@acme
-          type: string
-        to:
-          example: bob@acme
-          type: string
-        type:
-          example: text/plain
-          format: mime
-          type: string
-        body:
-          example: This is the message
-          type: string
-        timestamp:
-          type: string
-      type: object
     UserDTO:
       example:
         password: password
@@ -433,7 +384,6 @@ components:
         email:
           type: string
         password:
-          format: password
           type: string
       type: object
     UserSettingsDTO:
@@ -453,6 +403,22 @@ components:
         NotificationSound:
           type: boolean
         profileImage:
+          type: string
+      type: object
+    MessageDTO:
+      example:
+        sender: sender
+        id: 0
+        content: content
+        timestamp: timestamp
+      properties:
+        id:
+          type: integer
+        content:
+          type: string
+        sender:
+          type: string
+        timestamp:
           type: string
       type: object
     DiscussionDTO:
